force-app/main/default/objects/sugati__Contact_Payment_Detail__c/sugati__Contact_Payment_Detail__c.object-meta.xml
<CustomObject>
    <label>Contact Payment Detail</label>
    <nameField>
        <displayFormat>CPD-{00000000}</displayFormat>
        <label>Contact Payment Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>