force-app/main/default/objects/sugati__Contact_Payment_Detail__c/fields/sugati__S_CPD_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CPD_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>