force-app/main/default/objects/sugati__Contact_Payment_Detail__c/fields/sugati__S_CPD_Brand__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CPD_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>sugati__Brand__c</referenceTo>
    <relationshipLabel>Contact Payment Details</relationshipLabel>
    <relationshipName>Contact_Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>