force-app/main/default/objects/sugati__Contact_Payment_Detail__c/fields/sugati__S_CPD_Contact__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CPD_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Payment Details</relationshipLabel>
    <relationshipName>Contact_Payment_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>