force-app/main/default/objects/sugati__Contact_Payment_Detail__c/fields/sugati__S_CPD_Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CPD_Default_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this the default payment method for this contact?</description>
    <inlineHelpText>Is this the default payment method for this contact?</inlineHelpText>
    <label>Default Payment Method</label>
    <type>Checkbox</type>
</CustomField>