force-app/main/default/objects/sugati__Contact_Payment_Detail__c/fields/sugati__S_CPD_Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CPD_Last_4_Digits__c</fullName>
    <label>Last 4 Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>