force-app/main/default/objects/sugati__Contact_Payment_Detail__c/fields/sugati__S_CPD_Payment_Method_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CPD_Payment_Method_Id__c</fullName>
    <description>The payment gateway Id for this payment method.</description>
    <inlineHelpText>The payment gateway Id for this payment method.</inlineHelpText>
    <label>Payment Method Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>